src/test/java/io/spring/initializr/web/controller/ProjectMetadataControllerInvalidProjectRequestTest.java
/*
 * Copyright 2012-2023 the original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
// ********RoostGPT********
/*
Test generated by RoostGPT for test java-spring-movie using AI Type Azure Open AI and AI Model roostgpt-4-32k

ROOST_METHOD_HASH=invalidProjectRequest_039979df2c
ROOST_METHOD_SIG_HASH=invalidProjectRequest_4c4b3fea7f


Scenario [1]: Testing proper error response when InvalidProjectRequestException occurs

Details:
  TestName: handleInvalidProjectRequestException
  Description: This test verifies that when the method invalidProjectRequest is invoked with an InvalidProjectRequestException, it properly sets the response status to 400 (BAD_REQUEST) and includes an error message based on the exception.

Execution:
  Arrange: Set up a mock HttpServletResponse object to capture the response changes and create an InvalidProjectRequestException with a sample error message.
  Act: Call the invalidProjectRequest method, passing the mocked response and the prepared exception.
  Assert: Verify that the response's status is set to 400 and the error message matches the one provided in the exception.

Validation:
  Clarify if the error handling behavior aligns with the requirements for handling invalid project requests. This test ensures that the correct HTTP response code and message are applied, improving application reliability by addressing error scenarios appropriately.

*/

// ********RoostGPT********

package io.spring.initializr.web.controller;

import org.junit.jupiter.api.Test;
import org.mockito.Mockito;
import static org.mockito.Mockito.*;
import jakarta.servlet.http.HttpServletResponse;
import io.spring.initializr.web.project.InvalidProjectRequestException;
import java.io.IOException;
import org.junit.jupiter.api.Tag;
import org.junit.jupiter.api.*;
import java.util.concurrent.TimeUnit;
import io.spring.initializr.generator.version.Version;
import io.spring.initializr.metadata.DependencyMetadata;
import io.spring.initializr.metadata.DependencyMetadataProvider;
import io.spring.initializr.metadata.InitializrConfiguration.Platform;
import io.spring.initializr.metadata.InitializrMetadata;
import io.spring.initializr.metadata.InitializrMetadataProvider;
import io.spring.initializr.metadata.InvalidInitializrMetadataException;
import io.spring.initializr.web.mapper.DependencyMetadataJsonMapper;
import io.spring.initializr.web.mapper.DependencyMetadataV21JsonMapper;
import io.spring.initializr.web.mapper.InitializrMetadataJsonMapper;
import io.spring.initializr.web.mapper.InitializrMetadataV21JsonMapper;
import io.spring.initializr.web.mapper.InitializrMetadataV22JsonMapper;
import io.spring.initializr.web.mapper.InitializrMetadataV2JsonMapper;
import io.spring.initializr.web.mapper.InitializrMetadataVersion;
import org.springframework.http.CacheControl;
import org.springframework.http.HttpStatus;
import org.springframework.http.MediaType;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.ExceptionHandler;
import org.springframework.web.bind.annotation.GetMapping;
import org.springframework.web.bind.annotation.RequestParam;
import org.springframework.web.bind.annotation.RestController;

public class ProjectMetadataControllerInvalidProjectRequestTest {

	@Test
	@Tag("invalid")
	public void handleInvalidProjectRequestException() throws IOException {
		// Arrange
		HttpServletResponse mockResponse = Mockito.mock(HttpServletResponse.class);
		String expectedErrorMessage = "Invalid Spring Boot project request"; // TODO:
																				// Change
																				// error
																				// message
																				// based
																				// on
																				// scenario
		InvalidProjectRequestException exception = new InvalidProjectRequestException(expectedErrorMessage);
		ProjectMetadataController controller = new ProjectMetadataController(mock(InitializrMetadataProvider.class),
				mock(DependencyMetadataProvider.class));
		// Act
		controller.invalidProjectRequest(mockResponse, exception);
		// Assert
		verify(mockResponse, times(1)).sendError(HttpStatus.BAD_REQUEST.value(), expectedErrorMessage);
	}

}